k8s/web-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: photofeed-web
  name: photofeed-web
  namespace: photofeed
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: photofeed-web
    spec:
      restartPolicy: Always
      containers:
      - env:
        - name: DB_USER
          value: photofeed
        - name: DB_PASS
          value: s3cr3t      
        image: zjor/photofeed:latest
        imagePullPolicy: Always
        name: photofeed-web
        ports:
        - containerPort: 8000
        livenessProbe:
          # failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 15
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
        readinessProbe:
          # failureThreshold: 10
          initialDelaySeconds: 120
          periodSeconds: 60
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
