k8s/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photofeed-db
  name: photofeed-db
  namespace: photofeed
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    app: photofeed-db
