k8s/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photofeed-web
  name: photofeed-web
  namespace: photofeed
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: photofeed-web
