k8s/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: photofeed
  namespace: photofeed
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: 'photofeed.iscream.xyz'
    http:
      paths:
      - backend:
          serviceName: photofeed-web
          servicePort: 8000
